# SurrOptim

./: .gitignore  README.md  demo_surroptim.ipynb  index.md  neighrest_neighbour_meta_model.py  neural_network_meta_model.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
DOCS/: SURROPTIM_CHANGELOG_AND_PYTORCH_WINDOWS.md
scripts/: _check_param_slices.py  _quick_test_sampler.py  demo_surroptim.py  generate_metamodel_qrs_comparison.py  generate_metamodel_sigmoid.py  generate_rosen_plots.py  test_seed.py
src/: __init__.py  config.py  doe_strategies.py  meta_models.py  neighrest_neighbour_meta_model.py  polynomials.py  sampler.py  sparse_grid.py
src/suroptim/: __init__.py  (+1 more)
suroptim/: QoI.py  doe_strategies.py  gaussian_process_meta_model.py  neural_network_meta_model.py  polynomial_meta_models.py  util.py
suroptim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
surroptim/: DOE.py  QoI.py  distributions.py  doe_strategies.py  gaussian_process_meta_model.py  meta_models.py  neighrest_neighbour_meta_model.py  neural_network_meta_model.py  param_processor.py  polynomial_meta_models.py  polynomials.py  sampler.py  util.py
surroptim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_DOE.py  test_DOI.py  test_QoI_cls.py  test_batch_qoi.py  test_distributions.py  test_metamodels_all.py  test_neural_network_gradients.py  test_param_array_mode.py  test_param_cls.py  test_param_slices.py  test_polynomial_meta_models.py  test_r2_behavior.py  test_sampler_cls.py  test_sampler_new_cls.py  test_seed.py  test_sparse_grid.py  (+1 more)
(+5 files in other folders)
