[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suroptim"
version = "0.1.0"
description = "Simple optimization utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kerfriden" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]